# marktplaats-mcp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.fr.md  README.md  README.nl.md  THIRD_PARTY_NOTICES.md  pyproject.toml  server.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  update-categories.yml
docs/: PROMOTION.md
scripts/: update_categories.py
scripts/demo/: demo.sh  demo.tape
src/marktplaats_mcp/: __init__.py  categories.py  client.py  detail.py  models.py  parsing.py  server.py  sites.py
tests/: conftest.py  test_categories.py  test_client.py  test_parsing.py  test_server.py
tests/fixtures/: listing_page.html  search_2dehands.json  search_marktplaats.json  seller_profile.json
